# hnl-fire-data

./: .gitignore  LICENSE  README.md  pyproject.toml
JupyterNotebooks/: aggregate_lightning.ipynb  firetally.ipynb  testExcelparsing.ipynb  testing123.ipynb
data/working/: alldaily_totals_by_Zone_to_2025_20250716.csv  alldaily_totals_by_Zone_to_2025_20250717.csv  alldaily_totals_by_Zone_to_2025_20250718.csv  alldaily_totals_by_Zone_to_2025_20250719.csv  alldaily_totals_by_Zone_to_2025_20250721.csv  daily_tally_history_by_Zone_to_20250719.csv  daily_tally_history_by_Zone_to_20250721.csv  daily_tally_history_by_Zone_to_20250722.csv  daily_tally_history_by_Zone_to_20250723.csv  daily_tally_history_by_Zone_to_20250724.csv  daily_tally_history_by_Zone_to_20250725.csv  daily_tally_history_by_Zone_to_20250727.csv  daily_tally_history_by_Zone_to_20250728.csv  daily_tally_history_by_Zone_to_20250730.csv  daily_tally_history_by_Zone_to_20250801.csv  daily_tally_history_by_Zone_to_20250804.csv  dailyarea_PSA_2025_20250716.csv  dailyarea_PSA_2025_20250717.csv  dailyarea_PSA_2025_20250718.csv  dailyarea_PSA_2025_20250719.csv  dailyarea_PSA_2025_20250721.csv  dailyarea_PSA_2025_20250722.csv  dailyarea_PSA_2025_20250723.csv  dailyarea_PSA_2025_20250724.csv  dailyarea_PSA_2025_20250725.csv  dailyarea_PSA_2025_20250727.csv  dailyarea_PSA_2025_20250728.csv  dailyarea_PSA_2025_20250730.csv  (+30 more)
resources/: AICC_Daily_Stats_2004_to_Present.csv  Alaska Daily Stats by Protection-2004 to Present.csv
scripts/: download_lightning.py  explore_esriservice.py  update_firetally.py
(+2 files in other folders)
